# PickleMoE-

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_mlp.py  run_moe.py
configs/: mlp.yaml  moe_k1.yaml  moe_k1_no_lb.yaml  moe_k2.yaml  moe_k2_no_lb.yaml
docs/: experiment_report_template.md  final_report_full_score.md  github_references.md  pklmart_public_test_report.md  public_data_test_report.md  real_data_guide.md
notebooks/: eda_train.ipynb
platform/: app.js  data.js  doc.html  doc.js  index.html  styles.css
public_data_test/pklmart_pickleball/: metrics.json  summary.csv  summary.md
public_data_test/score_tennis/: metrics.json  summary.csv  summary.md
runs/: summary.csv  summary.md
runs/final_dense_mlp/: best_model.pt  config.yaml  history.csv  metrics.json  predictions.csv
runs/final_moe_k1_lb/: best_model.pt  class_to_expert.csv  config.yaml  history.csv  mean_gate_by_class.csv  metrics.json  preprocessor.joblib
runs/final_moe_k1_no_lb/: best_model.pt  class_to_expert.csv  config.yaml  history.csv  mean_gate_by_class.csv  metrics.json
runs/final_moe_k2_lb/: best_model.pt  class_to_expert.csv  config.yaml  history.csv  label_map.json  mean_gate_by_class.csv  mean_selected_gate_by_class.csv  metrics.json
runs/final_moe_k2_no_lb/: best_model.pt  class_to_expert.csv  config.yaml  history.csv  mean_gate_by_class.csv  mean_selected_gate_by_class.csv  (+1 more)
scripts/: generate_demo_data.py  prepare_real_dataset.py  public_pklmart_test.py  public_score_tennis_test.py  serve_platform.py  summarize_runs.py
tests/: test_demo.py  test_router.py
(+11 files in other folders)
